--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -27,3 +27,10 @@
     year = {2013}
 }
 
+@article{drepper2007cpumemory,
+  title={What every programmer should know about memory},
+  author={Drepper, Ulrich},
+  year={2007}
+}
+
+
