--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -3,14 +3,12 @@
     howpublished = {\url{http://www.cxxtest.com/}}
 }
 
-@misc{boost,
+@misc{boost_cpp,
     title = {{BOOST C++ libraries}},
     howpublished = {\url{http://www.boost.org/}}
 }
 
 @misc{culatools,
-    citeulike-article-id = {8694638},
-    citeulike-linkout-0 = {http://www.culatools.com/},
     keywords = {cula, gpgpu, hybrid, linear\_algebra},
     organization = {EM Photonics},
     posted-at = {2011-01-27 02:12:09},
@@ -44,4 +42,26 @@
   publisher={Springer}
 }
 
+@misc{TOP500,
+    priority = {2},
+    title = {{TOP500 Supercomputer Site}},
+    howpublished = {\url{http://www.top500.org}}
+}
+
+@MISC{thrust_gpu,
+  author = "Jared Hoberock and Nathan Bell",
+  title = "Thrust: A Parallel Template Library",
+  year = "2010",
+  url = "http://thrust.github.io/",
+  note = "Version 1.7.0"
+}
+
+@inproceedings{magma_2010,
+  title={Dense linear algebra solvers for multicore with GPU accelerators},
+  author={Tomov, Stanimire and Nath, Rajib and Ltaief, Hatem and Dongarra, Jack},
+  booktitle={Parallel \& Distributed Processing, Workshops and Phd Forum (IPDPSW), 2010 IEEE International Symposium on},
+  pages={1--8},
+  year={2010},
+  organization={IEEE}
+}
 
