--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -9,7 +9,7 @@ title={GEIRA: gene-environment and gene-gene interaction research application},
 url={http://dx.doi.org/10.1007/s10654-011-9582-5},
 publisher={Springer Netherlands},
 keywords={GWAS; Interaction; Program},
-author={Ding, Bo and Källberg, Henrik and Klareskog, Lars and Padyukov, Leonid and Alfredsson, Lars},
+author={Ding, Bo and K{\"a}llberg, Henrik and Klareskog, Lars and Padyukov, Leonid and Alfredsson, Lars},
 pages={557-561},
 language={English}
 }
@@ -303,7 +303,7 @@ URL = {http://www.worldscientific.com/doi/abs/10.1142/S0217751X13400216},
 eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
 }
 
-@inproceedings{jiang_accelerating,
+@article{jiang_accelerating,
   title={Accelerating genome-wide association studies using CUDA compatible graphics processing units},
   author={Jiang, Rui and Zeng, Feng and Zhang, Wangshu and Wu, Xuebing and Yu, Zhihong},
   booktitle={Bioinformatics, Systems Biology and Intelligent Computing, 2009. IJCBS'09. International Joint Conference on},
@@ -312,6 +312,13 @@ eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
   organization={IEEE}
 }
 
-
+@article{causal_bounds_arvid,
+  title={Bounds on causal interactions for binary outcomes},
+  author={Arvid Sj{\"o}lander and Lee, W and Henrik K{\"a}llberg and Pawitan,Y},
+  journal={Biometrics},
+  volume={X},
+  number={X},
+  year={2014}
+}
 
 
