Added some uml diagrams

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -65,3 +65,13 @@
   organization={IEEE}
 }
 
+@article{2010_reevaluating_amdahl,
+  title={Reevaluating Amdahl’s law in the multicore era},
+  author={Sun, Xian-He and Chen, Yong},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={70},
+  number={2},
+  pages={183--188},
+  year={2010},
+  publisher={Elsevier}
+}
