--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -321,4 +321,11 @@ eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
   year={2014}
 }
 
+@misc{gwis_conf,
+  title={GWIS-GS: GPU-Accelerated Screening Platform for Second Order Genome Wide Interaction Search},
+  author={Wang, Qiao and Kowalczyk, Adam},
+  year={2013},
+howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S3169-Genome-Wide-Interaction-Search.pdf}}
+}
+
 
