--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -33,4 +33,17 @@
   year={2007}
 }
 
+@book{kirk2012programming,
+  title={Programming massively parallel processors: a hands-on approach},
+  author={Kirk, David B and Wen-mei, W Hwu},
+  year={2012},
+  publisher={Newnes}
+}
+
+@book{introduction_hpc_hager,
+  title={Introduction to high performance computing for scientists and engineers},
+  author={Hager, Georg and Wellein, Gerhard},
+  year={2010},
+  publisher={CRC Press}
+}
 
