Changes to the UML, report and started with some of the src

--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -47,3 +47,16 @@
   publisher={CRC Press}
 }
 
+@misc{overlap_transfers_cuda,
+    title = {{How to Overlap Data Transfers in CUDA C/C++}},
+    author = {{Mark Harris}},
+    howpublished = {\url{http://devblogs.nvidia.com/parallelforall/how-overlap-data-transfers-cuda-cc/}}
+}
+
+@misc{kepler_tuning_guide,
+    title = {{Kepler Tuning Guide}},
+    author = {{NVIDIA}},
+    howpublished = {\url{http://docs.nvidia.com/cuda/kepler-tuning-guide}}
+}
+
+
