--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -328,4 +328,12 @@ eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
 howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S3169-Genome-Wide-Interaction-Search.pdf}}
 }
 
-
+@article{greenland1988invariants,
+  title={Invariants and noninvariants in the concept of interdependent effects.},
+  author={Greenland, Sander and Poole, Charles},
+  journal={Scandinavian journal of work, environment \& health},
+  volume={14},
+  number={2},
+  pages={125--129},
+  year={1988}
+}
